--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,3 +123,33 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Responsive sidebar width */
+[data-slot="sidebar-wrapper"] {
+  --sidebar-width: 14rem;
+}
+@media (min-width: 1024px) {
+  [data-slot="sidebar-wrapper"] {
+    --sidebar-width: 16rem;
+  }
+}
+
+
+/* Nest Hub */
+@media (max-width: 1280px) and (max-height: 850px) {
+  .responsive-width {
+    width: 62vw;
+  }
+}
+
+@media (max-width: 1280px) and (max-height: 845px) {
+  .responsive-width {
+    width: 91vw;
+  }
+}
+
+@media (max-width: 1024px) and (max-height: 600px) {
+  .responsive-width {
+    width: 71vw;
+  }
+}
